axion-telemetry-query-service/manifasts/tele-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telequieryservice
spec:
  type: ClusterIP
  selector:
    app: telequiery
  ports:
  - port: 8080
    targetPort: 8000
